# PeakMapPH_Android

./: .gitignore  CMakeLists.txt  android_release.keystore  design.qrc  main.cpp  todo.txt
FelgoHotReload/: Imports.qml
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/mipmap-anydpi-v26/: peakmaph_launcher_round.xml
android/res/values/: strings.xml
assets/: mapstyle.json  orignalmapstyle.json
assets/svg/: SI-AR Print-out Mapping - 09012025.xlsx
cmake/: FindQZxing.cmake
ios/: Project-Info.plist
libraries/qzxing/linuxdesktop/: libQZXing.so.3.3  libQZXing.so.3.3.0
libraries/qzxing/src/: CMakeLists.txt
qml/: Main.qml  PeakMapConfig.qml  config.json  qmldir
qml/components/: AppIcon.qml  AppText.qml  IconType.qml
qml/db/: AlertCongestion.qml  Database.qml  LiveSpeedLocation.qml  PassengerRideLog.qml  ReportedCongestion.qml  UserTable.qml
qml/fragments/: AlertBox.qml  ChartScreen.qml  Charts.qml  HeatMapCloud.qml  LoadBar.qml  Loading.qml  MapFragment.qml  QrScanner.qml
qml/network/graphql/: CoreGraphQL.qml  CoreInput.qml  CoreInputMarker.qml  CoreResponse.qml  CoreResponseMarker.qml  CoreType.qml  GraphQLType.qml  GraphqlTransportWS.qml
qml/network/graphql/model/: AccountInfo.qml  AnalyticsInput.qml  AnalyticsResponseType.qml  BusActivity.qml  BusActivityInput.qml  BusActivityUpdateAll.qml  BusActivityUpdateSubscription.qml  BusCounterInput.qml  CapacityLoadInput.qml  CapacityLoadType.qml  ClearBusActivity.qml  CongestionReporter.qml  CongestionReporterInput.qml  CongestionResponseModel.qml  CongestionUpdateSubscription.qml  CreateBusActivity.qml  GetAnalytics.qml  GetBusName.qml  GetCapacityLoad.qml  GetHeatMap.qml  GetHeatMapModel.qml  GetLocationName.qml  GetRouteMapModel.qml  GetStationLoadRank.qml  GetTodayBusActivity.qml  LocationPointType.qml  LoginInput.qml  LoginRequest.qml  StationLoad.qml  StationLoadUpdateSubscription.qml  TestType.qml  TriggerStationUpdate.qml  UpdateBusCounter.qml
qml/network/graphql/service/: BaseService.qml
qml/pages/: AboutPage.qml  AlertPage.qml  DashboardPage.qml  DriverActivityScreen.qml  DriverScreen.qml  LoginPage.qml  PassengerScreen.qml  ReportPage.qml  SwipeSessionView.qml
src/: aeshelper.cpp  aeshelper.h  bluetoothhelper.cpp  bluetoothhelper.h  filesystem.cpp  filesystem.h  peakmapbluez.cpp  peakmapbluez.h  peakmapdevice.cpp  peakmapdevice.h  peakmapservice.cpp  peakmapservice.h  peakqrdecoder.cpp  peakqrdecoder.h  peakvsink.h  sqlitedatatype.h  sqliteforeignkey.cpp  sqliteforeignkey.h  sqlitekey.cpp  sqlitekey.h  sqlitemetadesigner.cpp  sqlitemetadesigner.h  sqliteoperation.cpp  sqliteoperation.h  sqliteprimarykey.cpp  sqliteprimarykey.h  sqliteproperty.cpp  sqliteproperty.h  sqlitestorage.cpp  sqlitestorage.h  sqlitetable.cpp  sqlitetable.h  sqliteuniquekey.cpp  sqliteuniquekey.h
